--- a/index.html
+++ b/index.html
@@ -6,16 +6,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
     <h1>¡Un armario lleno de sorpresas!</h1>
-    <p>Mira este armario tan curioso que pintó Marcel Jean. Dentro, en lugar de ropa, ¡hay un lago, montañas y un paisaje hermoso!</p>
+    <p>Entra a este mundo mágico. Da un paso y camina por el camino  que te llevarán a lugares increíbles. Sube a la nave mágica, agárrate fuerte a las velas y deja que tu imaginación te lleve a donde quieras.</p>
     <div>
-    <img src="https://assets.editor.p5js.org/672cad6b16c7f30010c7f152/9b61474d-067b-4536-8b04-10c7575c7c50.webp">
+    <img src="https://raw.githubusercontent.com/CamilleJCC/mundo-magico/refs/heads/main/assets/7..webp">
       </div>
-    <div class="buttons">
-    <button class="button-class">Amigos</button>
-      <button class="button-class">Nieve</button>
-    <button class="button-class">Animales</button>
-    <button class="button-class">Mi familia</button>
-    </div>
+   <p>¿Qué crees que encontrarás al final de esas escaleras? ¿A dónde te llevará esta nave voladora, guiada por lunas y aves mágicas? ¿Es esto un sueño o es real?</p>
   </head>
   <body>
     <main>
