--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
 
         <div class="artwork-container">
-            <img src="assets/floating-clock.png" class="surreal-element clock">
-            <img src="assets/butterfly-eye.png" class="surreal-element butterfly">
-            <img src="assets/cloud-stairs.png" class="surreal-element clouds">
+            <img src="assets/7..webp" class="surreal-element clock">
+            <img src="assets/7..webp" class="surreal-element butterfly">
+            <img src="assets/7..webp" class="surreal-element clouds">
             
             <div class="investigation-area">
                 <div class="zoom-area"></div>
