--- a/index.html
+++ b/index.html
@@ -7,35 +7,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="main-container">
-        <div class="investigation-tools">
-            <div class="magnifying-glass" draggable="true">
-                <img src="assets/magnifying-glass.png" class="tool-icon">
-                <div class="glass-effect"></div>
-            </div>
+    <div class="investigation-container">
+        <div class="artwork-frame">
+            <img src="assets/7.webp" alt="Surreal Artwork" class="artwork floating">
+        </div>
+        
+        <div class="magnifying-glass" id="magnifier" draggable="true">
+            <img src="https://i.imgur.com/8pYkgGk.png" class="tool-icon">
+            <div class="glass-effect"></div>
         </div>
 
-        <div class="artwork-container">
-            <img src="assets/7..webp" class="surreal-element clock">
-            <img src="assets/7..webp" class="surreal-element butterfly">
-            <img src="assets/7..webp" class="surreal-element clouds">
-            
-            <div class="investigation-area">
-                <div class="zoom-area"></div>
-                <div class="clue-spots"></div>
-            </div>
-        </div>
-
-        <div class="detective-notes">
-            <div class="notebook-paper">
-                <h3>🔍 Tu Descubrimiento Surrealista</h3>
-                <textarea class="magic-input" placeholder="¿Qué elementos mágicos encontraste en la obra?"></textarea>
-                <button class="submit-btn">
-                    <span>¡Revelar el misterio!</span>
-                    <div class="magical-sparkles"></div>
-                </button>
-            </div>
+        <div class="response-section">
+            <textarea class="magic-input" placeholder="¿Qué elementos surrealistas ves en esta obra?"></textarea>
+            <button class="reveal-btn">Revelar Surrealismo ✨</button>
+            <div class="revealed-answer"></div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
