--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="investigation-container">
         <div class="artwork-frame">
-            <img src="assets/7.webp" alt="Surreal Artwork" class="artwork floating">
+            <img src="assets/7..webp" alt="Surreal Artwork" class="artwork floating">
         </div>
         
         <div class="magnifying-glass" id="magnifier" draggable="true">
