--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
             <div class="glass-effect"></div>
         </div>
 
-        <div class="response-section">
-            <textarea class="magic-input" placeholder="¿Qué elementos surrealistas ves en esta obra?"></textarea>
-            <button class="reveal-btn">Revelar Surrealismo ✨</button>
-            <div class="revealed-answer"></div>
-        </div>
+       <div class="response-section">
+    <div class="revealed-answer">
+        <!-- Notebook paper background will be applied here -->
+    </div>
+    <textarea class="magic-input" placeholder="¿Qué elementos surrealistas ves en esta obra?"></textarea>
+    <button class="reveal-btn">Revelar Surrealismo ✨</button>
+</div>
+
     </div>
     <script src="script.js"></script>
 </body>
