--- a/index.html
+++ b/index.html
@@ -9,22 +9,19 @@
 <body>
     <div class="investigation-container">
         <div class="artwork-frame">
-            <img src="assets/7..webp" alt="Surreal Artwork" class="artwork floating">
-        </div>
-        
-        <div class="magnifying-glass" id="magnifier" draggable="true">
-            <img src="https://i.imgur.com/8pYkgGk.png" class="tool-icon">
-            <div class="glass-effect"></div>
+            <img src="assets/7..webp" alt="Surreal Artwork" class="artwork" id="myimage">
+            <div class="magnifying-glass">
+                <!-- The magnifying glass effect will be handled by JavaScript -->
+            </div>
         </div>
 
-       <div class="response-section">
-    <div class="revealed-answer">
-        <!-- Notebook paper background will be applied here -->
-    </div>
-    <textarea class="magic-input" placeholder="¿Qué elementos surrealistas ves en esta obra?"></textarea>
-    <button class="reveal-btn">Revelar Surrealismo ✨</button>
-</div>
-
+        <div class="response-section">
+            <div class="revealed-answer">
+                <!-- Dynamic content will appear here -->
+            </div>
+            <textarea class="magic-input" placeholder="¿Qué elementos surrealistas ves en esta obra?"></textarea>
+            <button class="reveal-btn">Revelar Surrealismo ✨</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
