--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>DESCUBRE UN MUNDO MÁGICO/h1>
+<p>Entra a este mundo mágico. Da un paso y camina por el sendero que te llevará a lugares increíbles. Sube a la nave mágica, agárrate fuerte a las velas y deja que tu imaginación te lleve a donde quieras.</p>
     <div class="investigation-container">
         <div class="artwork-frame">
             <img src="assets/7..webp" alt="Surreal Artwork" class="artwork" id="myimage">
@@ -14,7 +16,7 @@
                 <!-- The magnifying glass effect will be handled by JavaScript -->
             </div>
         </div>
-
+<p>¿Qué crees que encontrarás al final de esas escaleras? ¿A dónde te llevará esta nave voladora, guiada por lunas y aves mágicas? ¿Es esto un sueño o es real?</p>
         <div class="response-section">
             <div class="revealed-answer">
                 <!-- Dynamic content will appear here -->
