--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>DESCUBRE UN MUNDO MÁGICO/h1>
-<p>Entra a este mundo mágico. Da un paso y camina por el sendero que te llevará a lugares increíbles. Sube a la nave mágica, agárrate fuerte a las velas y deja que tu imaginación te lleve a donde quieras.</p>
     <div class="investigation-container">
+<h1>DESCUBRE UN MUNDO MÁGICO</h1>
+<p>Entra a este mundo mágico. Da un paso y camina por el sendero que te llevará a lugares increíbles. Sube a la nave mágica, agárrate fuerte a las velas y deja que tu imaginación te lleve a donde quieras.</p>
         <div class="artwork-frame">
             <img src="assets/7..webp" alt="Surreal Artwork" class="artwork" id="myimage">
             <div class="magnifying-glass">
