--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <!-- The magnifying glass effect will be handled by JavaScript -->
             </div>
         </div>
-<p>¿Qué crees que encontrarás al final de esas escaleras? ¿A dónde te llevará esta nave voladora, guiada por lunas y aves mágicas? ¿Es esto un sueño o es real?</p>
+<p>¿Qué crees que encontrarás al final de esas escaleras? <br>¿A dónde te llevará esta nave voladora, guiada por lunas y aves mágicas?  <br>¿Es esto un sueño o es real?</p>
         <div class="response-section">
             <div class="revealed-answer">
                 <!-- Dynamic content will appear here -->
