--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 <body>
     <div class="investigation-container">
 <h1>DESCUBRE UN MUNDO MÁGICO</h1>
-<p>Entra a este mundo mágico. Da un paso y camina por el sendero que te llevará a lugares increíbles. Sube a la nave mágica, agárrate fuerte a las velas y deja que tu imaginación te lleve a donde quieras.</p>
         <div class="artwork-frame">
             <img src="assets/7..webp" alt="Surreal Artwork" class="artwork" id="myimage">
             <div class="magnifying-glass">
                 <!-- The magnifying glass effect will be handled by JavaScript -->
             </div>
         </div>
-<p>¿Qué crees que encontrarás al final de esas escaleras? <br>¿A dónde te llevará esta nave voladora, guiada por lunas y aves mágicas?  <br>¿Es esto un sueño o es real?</p>
+<p>Entra a este mundo mágico. Da un paso y camina por el sendero que te llevará a lugares increíbles. Sube a la nave mágica, agárrate fuerte a las velas y deja que tu imaginación te lleve a donde quieras. <br>¿Qué crees que encontrarás al final de esas escaleras? <br>¿A dónde te llevará esta nave voladora, guiada por lunas y aves mágicas?  <br>¿Es esto un sueño o es real?</p>
         <div class="response-section">
             <div class="revealed-answer">
                 <!-- Dynamic content will appear here -->
