--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <!-- The magnifying glass effect will be handled by JavaScript -->
             </div>
         </div>
-<p>Entra a este mundo mágico. Da un paso y camina por el sendero que te llevará a lugares increíbles. Sube a la nave mágica, agárrate fuerte a las velas y deja que tu imaginación te lleve a donde quieras. <br>¿Qué crees que encontrarás al final de esas escaleras? <br>¿A dónde te llevará esta nave voladora, guiada por lunas y aves mágicas?  <br>¿Es esto un sueño o es real?</p>
+<p>Entra a este mundo mágico. Da un paso y camina por el sendero que te llevará a lugares increíbles. Sube a la nave mágica, agárrate fuerte a las velas y deja que tu imaginación te lleve a donde quieras. <br><br>¿Qué crees que encontrarás al final de esas escaleras? <br>¿A dónde te llevará esta nave voladora, guiada por lunas y aves mágicas?  <br>¿Es esto un sueño o es real?</p>
         <div class="response-section">
             <div class="revealed-answer">
                 <!-- Dynamic content will appear here -->
