--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <p>Entra a este mundo mágico. Da un paso y camina por el sendero que te llevará a lugares increíbles. Sube a la nave mágica, agárrate fuerte a las velas y deja que tu imaginación te lleve a donde quieras. <br><br>¿Qué crees que encontrarás al final de esas escaleras? <br>¿A dónde te llevará esta nave voladora, guiada por lunas y aves mágicas? <br>¿Es esto un sueño o es real?</p>
             
             <div class="response-section">
-                <div class="revealed-answer">
-                    <!-- Dynamic content will appear here -->
+                <div class="answers-container">
+                    <!-- Multiple answers will appear here -->
                 </div>
                 <textarea class="magic-input" placeholder="¿Qué elementos surrealistas ves en esta obra?"></textarea>
                 <button class="reveal-btn">Revelar Surrealismo ✨</button>
