--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="investigation-container">
         <div class="left-col">
             <h1>DESCUBRE UN MUNDO MÁGICO</h1>
-            <p>Entra a este mundo mágico. Da un paso y camina por el sendero que te llevará a lugares increíbles. Sube a la nave mágica, agárrate fuerte a las velas y deja que tu imaginación te lleve a donde quieras. <br><br>¿Qué crees que encontrarás al final de esas escaleras? <br>¿A dónde te llevará esta nave voladora, guiada por lunas y aves mágicas? <br>¿Es esto un sueño o es real?</p>
+            <p>Entra y sube a la nave mágica, agárrate fuerte a las velas y deja que tu imaginación te lleve a donde quieras.<br> ¿A dónde irás? ¿Es un sueño o es real?</p>
             
             <div class="response-section">
                 <div class="answers-container">
@@ -22,7 +22,7 @@
         </div>
 
         <div class="artwork-frame">
-            <img src="assets/7..webp" alt="Surreal Artwork" class="artwork" id="myimage">
+            <img src="assets/7..webp" class="artwork" id="myimage" alt="Remedios Varo, Icono (Icon), 1945">
             <div class="magnifying-glass">
                 <!-- The magnifying glass effect will be handled by JavaScript -->
             </div>
