--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <!-- Multiple answers will appear here -->
                 </div>
                 <textarea class="magic-input" placeholder="¿Qué elementos surrealistas ves en esta obra?"></textarea>
-                <button class="reveal-btn">Revelar Surrealismo <img src="assets/flecha.svg"></button>
+                <button class="reveal-btn">Revelar Surrealismo <img src="assets/flecha.svg" width="11px"></button>
             </div>
         </div>
 
