--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
             </div>
         </div>
 
-        <div class="artwork-frame">
-            <img src="assets/7..webp" class="artwork" id="myimage" alt="Remedios Varo, Icono (Icon), 1945">
-            <div class="magnifying-glass">
-                <!-- The magnifying glass effect will be handled by JavaScript -->
-            </div>
-        </div>
+      <div class="artwork-frame">
+    <img src="assets/7..webp" class="artwork" id="myimage" alt="Remedios Varo, Icono (Icon), 1945">
+    <div class="tooltip-container">
+        <img src="assets/Question.svg" class="question-icon" alt="Question mark">
+        <p class="tooltip-text">Your tooltip text goes here</p>
+    </div>
+    <div class="magnifying-glass">
+        <!-- The magnifying glass effect will be handled by JavaScript -->
+    </div>
+</div>
+
     </div>
     <script src="script.js"></script>
 </body>
