--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <div class="investigation-container">
         <div class="left-col">
             <h1>DESCUBRE UN MUNDO MÁGICO</h1>
-            <p>Entra y sube a la nave mágica, agárrate fuerte a las velas y deja que tu imaginación te lleve a donde quieras.<br> ¿A dónde irás? ¿Es un sueño o es real?</p>
+            <p>Entra y sube a la nave mágica de la artista española Remedios Varo. Agárrate fuerte a las alas y deja que tu imaginación te lleve a donde quieras.<br>
+          <span class="semibold">  ¿Cómo se mueve la nave mágica? ¿Cómo es el lugar por el que viaja? <br>
+¿A dónde irías tú con la nave? <br>
+¿Crees que es un sueño o que es real? ¿Recuerdas tus sueños cuando te despiertas?</span>
+</p>
             
             <div class="response-section">
                 <div class="answers-container">
@@ -24,8 +28,8 @@
       <div class="artwork-frame">
     <img src="assets/7..webp" class="artwork" id="myimage" alt="Remedios Varo, Icono (Icon), 1945">
     <div class="tooltip-container">
-        <img src="assets/Question.svg" class="question-icon" alt="Question mark">
-        <p class="tooltip-text">Your tooltip text goes here</p>
+        <img src="assets/Navegacion-07.svg" class="plus-icon" alt="Plus">
+        <p class="tooltip-text">Remedios Varo,<span class="italic"> Icono,</span> 1945</p>
     </div>
     <div class="magnifying-glass">
         <!-- The magnifying glass effect will be handled by JavaScript -->
