--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="left-col">
             <h1>DESCUBRE UN MUNDO MÁGICO</h1>
             <p>Entra y sube a la nave mágica de la artista española Remedios Varo. Agárrate fuerte a las alas y deja que tu imaginación te lleve a donde quieras.<br>
-          <span class="semibold">  ¿Cómo se mueve la nave mágica? ¿Cómo es el lugar por el que viaja? <br>
+          <span class="semibold">  ¿Cómo se mueve la nave mágica?<br> ¿Cómo es el lugar por el que viaja? <br>
 ¿A dónde irías tú con la nave? <br>
-¿Crees que es un sueño o que es real? ¿Recuerdas tus sueños cuando te despiertas?</span>
+¿Crees que es un sueño o que es real?<br> ¿Recuerdas tus sueños cuando te despiertas?</span>
 </p>
             
             <div class="response-section">
@@ -26,7 +26,7 @@
         </div>
 
       <div class="artwork-frame">
-    <img src="assets/7..webp" class="artwork" id="myimage" alt="Remedios Varo, Icono (Icon), 1945">
+    <img src="assets/7.png" class="artwork" id="myimage" alt="Remedios Varo, Icono (Icon), 1945">
     <div class="tooltip-container">
         <img src="assets/Navegacion-07.svg" class="plus-icon" alt="Plus">
         <p class="tooltip-text">Remedios Varo,<span class="italic"> Icono,</span> 1945</p>
