--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                     <!-- Multiple answers will appear here -->
                 </div>
                 <textarea class="magic-input" placeholder="¿Qué elementos surrealistas ves en esta obra?"></textarea>
-                <button class="reveal-btn">Revelar Surrealismo <img src="images/flecha.svg" width="11px"></button>
+                <button class="reveal-btn">Revelar Surrealismo <img src="assets/flecha.svg" width="11px"></button>
             </div>
         </div>
 
       <div class="artwork-frame">
-    <img src="images/7.png" class="artwork" id="myimage" alt="Remedios Varo, Icono (Icon), 1945">
+    <img src="assets/7.png" class="artwork" id="myimage" alt="Remedios Varo, Icono (Icon), 1945">
     <div class="tooltip-container">
-        <img src="images/Navegacion-07.svg" class="plus-icon" alt="Plus">
+        <img src="assets/Navegacion-07.svg" class="plus-icon" alt="Plus">
         <p class="tooltip-text">Remedios Varo,<span class="italic"> Icono,</span> 1945</p>
     </div>
     <div class="magnifying-glass">
