--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="left-col">
             <h1>DESCUBRE UN MUNDO MÁGICO</h1>
           <h2> Entra y sube a la nave mágica de la artista española <span class="italic"> Remedios Varo.</span> <br> Agárrate fuerte a las alas y deja que tu imaginación te lleve a donde quieras.</h2>
-         <p>  <span class="semibold">  ¿Cómo se mueve la nave mágica?<br> ¿Cómo es el lugar por el que viaja? <br>
-<br>¿A dónde irías tú con la nave? <br>
+      <br>   <p>  <span class="semibold">  ¿Cómo se mueve la nave mágica?<br> ¿Cómo es el lugar por el que viaja? <br>
+¿A dónde irías tú con la nave? <br>
 ¿Crees que es un sueño o que es real?<br> ¿Recuerdas tus sueños cuando te despiertas?</span>
 </p>
             
