--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mundo Mágico del Arte</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="firebase-config.js"></script>
+    <script type="module" src="script.js"></script>
 </head>
 <body>
     <div class="investigation-container">
@@ -37,6 +39,5 @@
 </div>
 
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
