--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="investigation-container">
         <div class="left-col">
             <h1>DESCUBRE UN MUNDO MÁGICO</h1>
-          <h2> Entra y sube a la nave mágica de la artista española <span class="semibold"> Remedios Varo.</span> Agárrate fuerte a las alas y deja que tu imaginación te lleve a donde quieras.</h2>
+          <h2> Sube a la nave mágica de la artista española <span class="semibold">Remedios Varo.</span> Agárrate fuerte y disfruta del viaje.</h2>
       <br>   <p> ¿Cómo se mueve la nave mágica? ¿Cómo es el lugar por el que viaja? <br>
 ¿A dónde irías tú con la nave? <br>
 ¿Crees que es un sueño o que es real? ¿Recuerdas tus sueños cuando te despiertas?
