--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="investigation-container">
         <div class="left-col">
-            <h1>DESCUBRE UN MUNDO MÁGICO</h1>
+            <h1>DESCUBRE <br>UN MUNDO MÁGICO</h1>
           <h2> Sube a la nave mágica de la artista española <span class="semibold">Remedios Varo.</span> Agárrate fuerte y disfruta del viaje.</h2>
       <br>   <p> ¿Cómo se mueve la nave mágica? ¿Cómo es el lugar por el que viaja? <br>
 ¿A dónde irías tú con la nave? <br>
