--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <img src="assets/7.png" class="artwork" id="myimage" alt="Remedios Varo, Icono (Icon), 1945">
     <div class="tooltip-container">
          <button class="plus-icon" id="plusBtn">+</button>
-        <p class="tooltip-text">Remedios Varo,<span class="italic"> Icono,</span> 1945</p>
+        <p class="tooltip-text">Remedios Varo,<span class="italic"> Icono,</span> 1945 © Remedios Varo; VEGAP</p>
     </div>
     <div class="magnifying-glass">
         <!-- The magnifying glass effect will be handled by JavaScript -->
